# snake

./: CMakeLists.txt  Constants.hpp  Game.cpp  Game.hpp  GameGUI.cpp  GameGUI.hpp  Position.hpp  README.md  main.cpp  snakeLauncher.cpp  sos.sh
Abstract/: AbstractCUI.cpp  AbstractCUI.hpp  AbstractGUI.cpp  AbstractGUI.hpp  AbstractManager.cpp  AbstractManager.hpp  AbstractUI.cpp  AbstractUI.hpp
Client/: snakeLauncher.cpp
Client/Abstract/: AbstractManager.hpp  AbstractUI.hpp
Client/Game/: GameCUI.cpp  GameGUI.cpp  GameGUI.hpp  GameManager.hpp  GameUI.cpp  GameUI.hpp
Client/Ressources/Images/: snakeLauncher.xcf
Common/: Networking.cpp  Networking.hpp  Position.hpp
Common/Entities/: Food.cpp  Food.hpp  Snake.cpp  Snake.hpp
Common/Tools/: Constants.hpp  Global.hpp  Ressources.hpp  Timer.cpp  Timer.hpp
Entities/: Food.cpp  Food.hpp  Snake.cpp  Snake.hpp
Game/: GameCUI.cpp  GameCUI.hpp  GameGUI.cpp  GameGUI.hpp  GameManager.cpp  GameManager.hpp  GameUI.cpp  GameUI.hpp
Server/: GameEngine.cpp  GameEngine.hpp  GameServer.cpp  GameServer.hpp  PlayerConnection.cpp  PlayerConnection.hpp  Server.cpp  Server.hpp  serverLauncher.cpp
Tools/: Constants.hpp  Global.cpp  Global.hpp
